# gtk-cpp-template

./: .gitignore  CMakeLists.txt  README.md  configure  run
src/: CMakeLists.txt  main.cc  window.cc  window.hh
